<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".CreditsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/creditsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditstextview"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/creditsContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textSize="16sp"
            android:lineSpacingExtra="8dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fermer"
            android:layout_gravity="center"
            android:onClick="closeCredits"/>
    </LinearLayout>
</FrameLayout>